# cli_clip

./: Cargo.toml  README.md
src/: main.rs
